# pipelines-airflow

./: .gitignore  README.md  airflow_docker_debug_wrapper.py  deploy.sh  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
dags/: assertions_sync_dag.py  bootstrap-event-core-actions.sh  bootstrap-index-actions.sh  bootstrap-ingest-large-actions.sh  bootstrap-ingest-small-actions.sh  bootstrap-la-pipelines-config.sh  clustering_dag.py  constraints-3.11-updated.txt  create_dag.py  daily_dr_count.py  delete_drs_dag.py  deploy.sh  download-annotations.sh  download-avro-hdfs-for-downloads.sh  download-datasets-avro-hdfs.sh  download-datasets-avro.sh  download-datasets-for-indexing.sh  download-datasets-hdfs.sh  download-datasets-image-sync.sh  download-datasets.sh  dwca_verbatim_dag.py  elastic_dataset_dag.py  expert_distribution_dag.py  export_event_core_dag.py  full_index_to_solr_dag.py  generate_parquet.py  generate_parquet_dag.py  image_load_dataset.py  image_sync_datasets_dag.py  ingest_all_datasets_dag.py  ingest_large_datasets_dag.py  ingest_publication_dag.py  ingest_small_datasets_dag.py  jackknife_dag.py  load_dataset_dag.py  load_provider_dag.py  pre_ingest_drs_dag.py  requirements-dev-scheduler.txt  requirements-dev-worker.txt  requirements.txt  (+14 more)
dags/ala/: ala_config.py  ala_helper.py  cluster_setup.py  jwt_auth.py
dags/sh/: bootstrap-cloudwatch-agent.sh  bootstrap-event-core-actions.sh  bootstrap-export-event-core-actions.sh  bootstrap-generate-parquet.sh  bootstrap-image-sync-actions.sh  bootstrap-index-actions.sh  deploy.sh  (+10 more)
