[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipelines-airflow"
version = "2.0.0"
description = "Airflow DAGs and utilities for Atlas of Living Australia data pipelines"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE.md" }
authors = [
	{ name = "Atlas of Living Australia" }
]
classifiers = [
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.11",
	"License :: OSI Approved :: Mozilla Public License 1.1 (MPL 1.1)",
	"Framework :: Apache Airflow",
]
dependencies = []  # Runtime dependencies are managed via Airflow deployment/constraints.

[project.optional-dependencies]
dev = [
	"black>=24.4.0",
]

[tool.black]
line-length = 120
target-version = ['py311']
skip-string-normalization = true
skip-magic-trailing-comma = true